[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amsterdam-rent-scraper"
version = "0.1.0"
description = "Scrape Dutch rental websites, extract info via local LLM, export to Excel + interactive HTML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pierre Llompart"},
]

dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "selenium>=4.20",
    "playwright>=1.44",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "jinja2>=3.1",
    "typer[all]>=0.12",
    "rich>=13.7",
    "ollama>=0.3",
    "pydantic>=2.7",
    "fake-useragent>=1.5",
    "tenacity>=8.3",
    "geopy>=2.4",
    "folium>=0.16",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
rent-scraper = "amsterdam_rent_scraper.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
